feat: describe all POST endpoints
